--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>vai ser uma imagem aqui</h1>
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="starbook9.jpg" alt="starbook">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Avaliar</li>
+            <li class="cabecalho-lista-item">Inscrever-se</li>
+            <li class="cabecalho-lista-item">Login</li>
+        </ul>
     </header>
 </body>
 </html>
