coloquei os textos

--- a/index.html
+++ b/index.html
@@ -15,5 +15,23 @@
             <li class="cabecalho-lista-item">Login</li>
         </ul>
     </header>
+    <section class="textos">
+        <p class="textos-texto-um">Um site para quem gosta de ler, avalie e veja as avaliações e recomendações de outras pessoas junto do o preço do livro desejado.</p>
+        <p class="textos-texto-dois">
+            “Os teus olhos”
+            Dayane Xavier
+            R$42,22</p>
+        <h2 class="textos-titulo-tres">Sofia2308</h2>
+        <p class="textos-texto-tres">"Amei, livro excelente! Uma história de romance que nos envolve a cada página que lemos."</p>
+        <h2 class="textos-titulo-um">Recomendação do dia:</h2>
+        <h2 class="textos-titulo-dois">Sinopse:</h2>
+        <p class="textos-texto-quatro">
+            “O jardim secreto”
+            Fraces Rodyson Burnett
+            R$11,44</p>
+        <p class="textos-texto-cinco">
+               “A descoberta de um jardim abandonado transforma não só a vida da pequena órfâ carrancuda, mal-humorada e rude, como a de todos que vivem no Solar de Misselthwaite, localizado na sombria Yorkshire. Quando Mary Lennox deixa a Índia e chega à mansão de seu tio em Yorkshire, tudo parece estranho para ela. Até que certo dia ouve falar de um jardim misterioso onde ninguém põe os pés há dez anos. Com a ajuda de alguns novos amigos, ela planeja descobrir esse segredo... e fazê-lo florescer novamente.”
+            </p>
+    </section>
 </body>
 </html>
