--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
             <img class="o-jardim-secreto" src="o jardim secreto.PNG" alt="sinopse do livro o jardim secreto">
             <img class="livro-imagem" src="Reading book-pana.png" alt="pessoas lendo livros">
     </section>
+    <footer class="rodape">
+        <img class="rodape-img" src="starbook9.jpg" alt="starbook">
+    </footer>
 </body>
 </html>
